// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags With links renders correctly 1`] = `
<div>
  <div
    class="css-5d1elh-boxStyles"
  >
    <h2
      class="css-1sf8c0k-boxStyles"
    >
      Tags:
    </h2>
    <ul
      class="css-bps6g8-boxStyles"
    >
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-1iydc84-boxStyles-Tag"
        >
          <a
            class="css-154ed0u-TextLink-boxStyles"
            href="#"
          >
            Foo
          </a>
        </span>
      </li>
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-1iydc84-boxStyles-Tag"
        >
          <a
            class="css-154ed0u-TextLink-boxStyles"
            href="#"
          >
            Bar
          </a>
        </span>
      </li>
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-1iydc84-boxStyles-Tag"
        >
          <a
            class="css-154ed0u-TextLink-boxStyles"
            href="#"
          >
            Baz
          </a>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tags With onRemove renders correctly 1`] = `
<div>
  <div
    class="css-5d1elh-boxStyles"
  >
    <h2
      class="css-1sf8c0k-boxStyles"
    >
      Tags:
    </h2>
    <ul
      class="css-bps6g8-boxStyles"
    >
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-1iydc84-boxStyles-Tag"
        >
          <a
            class="css-154ed0u-TextLink-boxStyles"
            href="#"
          >
            Foo
          </a>
          <button
            aria-label="Remove Foo"
            class="css-1k0n9kg-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1bxcfjp"
              clip-rule="evenodd"
              fill-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-1iydc84-boxStyles-Tag"
        >
          <a
            class="css-154ed0u-TextLink-boxStyles"
            href="#"
          >
            Bar
          </a>
          <button
            aria-label="Remove Bar"
            class="css-1k0n9kg-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1bxcfjp"
              clip-rule="evenodd"
              fill-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-1iydc84-boxStyles-Tag"
        >
          <a
            class="css-154ed0u-TextLink-boxStyles"
            href="#"
          >
            Baz
          </a>
          <button
            aria-label="Remove Baz"
            class="css-1k0n9kg-BaseButton-boxStyles-TagRemoveButton"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1bxcfjp"
              clip-rule="evenodd"
              fill-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="18"
                x2="6"
                y1="6"
                y2="18"
              />
              <line
                x1="6"
                x2="18"
                y1="6"
                y2="18"
              />
            </svg>
          </button>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tags Without links renders correctly 1`] = `
<div>
  <div
    class="css-5d1elh-boxStyles"
  >
    <h2
      class="css-1sf8c0k-boxStyles"
    >
      Tags:
    </h2>
    <ul
      class="css-bps6g8-boxStyles"
    >
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-vbiega-boxStyles-Tag"
        >
          <span
            class="css-12ek51e-boxStyles"
          >
            Foo
          </span>
        </span>
      </li>
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-vbiega-boxStyles-Tag"
        >
          <span
            class="css-12ek51e-boxStyles"
          >
            Bar
          </span>
        </span>
      </li>
      <li
        class="css-12ek51e-boxStyles"
      >
        <span
          class="css-vbiega-boxStyles-Tag"
        >
          <span
            class="css-12ek51e-boxStyles"
          >
            Baz
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
